--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -37,14 +37,14 @@
                     </a>
                 </div>
                 <div class="login-form">
-                    <form>
+                    <form action="/login" method="POST">
                         <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <label>Username</label>
+                            <input type="text" name="Username" class="form-control" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" name="Password" class="form-control" placeholder="Password">
                         </div>
                         <!--<div class="checkbox">
                             <label>
