--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -66,7 +66,8 @@
 
                     <div class="user-area dropdown float-right">
                         <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="user-avatar rounded-circle" src="images/admin.jpg" alt="User Avatar">
+                            <!--<img class="user-avatar rounded-circle" src="images/admin.jpg" alt="User Avatar">-->
+                            <h3><%= session.username %></h3>
                         </a>
 
                         <div class="user-menu dropdown-menu">
@@ -74,7 +75,7 @@
 
                             <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
 
-                            <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Logout</a>
+                            <a class="nav-link" href="/logout"><i class="fa fa-power -off"></i>Logout</a>
                         </div>
                     </div>
 
