--- a/app/views/header/left_panel.ejs
+++ b/app/views/header/left_panel.ejs
@@ -4,13 +4,13 @@
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="index.html"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
+                    <a href="/home"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
                 </li>
 
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <!--<i class="menu-icon fa fa-glass"></i>-->Transactions</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
+                        <li><i class="menu-icon ti-briefcase"></i><a href="/bills">Bills</a></li>
                     </ul>
                 </li>
             </ul>
