--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,9 +26,9 @@
                                           %>
                                             <div class="stat-text"> <span class="count"><%= per %></span>%</div>
                                             <div class="stat-heading"><span class="box-title"><%= battery[i].model_no %></span></div>
-                                            <div class="stat-heading"><span class="box-title">Total Storage : </span> <%= battery[i].Storage %></div>
+                                            <div class="stat-heading"><span class="box-title">Total Storage : </span> <%= battery[i].Storage %> KwH</div>
                                             <!-- Current Power To be done in AJAX form in the future -->
-                                            <div class="stat-heading"><span class="box-title">Current Power : </span> <%= battery[i].Current_power %></div>
+                                            <div class="stat-heading"><span class="box-title">Current Power : </span> <%= battery[i].Current_power %> KwH</div>
                                         </div>
                                     </div>
                                 </div>
