.sql file updated

--- a/app/views/header/left_panel.ejs
+++ b/app/views/header/left_panel.ejs
@@ -8,9 +8,10 @@
                 </li>
 
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <!--<i class="menu-icon fa fa-glass"></i>-->Transactions</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Transactions</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon ti-briefcase"></i><a href="/bills">Bills</a></li>
+                        <li><i class="menu-icon ti-pulse"></i><a href="/power_transfer">Current Power Transfer</a></li>
                     </ul>
                 </li>
             </ul>
