--- a/app/views/header/top_nav.ejs
+++ b/app/views/header/top_nav.ejs
@@ -2,7 +2,7 @@
 <header id="header" class="header">
     <div class="top-left">
         <div class="navbar-header">
-            <a class="navbar-brand" href="./"><h2>IOE</h2></a>
+            <a class="navbar-brand" href="./"><img src="http://ioe.techclub.team/img/logo_transparent.png" style="height:2.7rem"/></a>
             <a class="navbar-brand hidden" href="./"><img src="images/logo2.png" alt="Logo"></a>
             <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
         </div>
