--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -64,7 +64,7 @@
                         <div class="col-xl-8">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="box-title">House sellers </h4>
+                                    <h4 class="box-title">House sellers in your grid</h4>
                                 </div>
                                 <div class="card-body--">
                                     <div class="table-stats order-table ov-h">
@@ -143,7 +143,7 @@
                                   <div class="card">
                                       <div class="card-body">
                                           <div class="mx-auto d-block">
-                                              <img class=" mx-auto d-block" src="https://www.dubaiapprovals.com/wp-content/uploads/2018/11/dewa-960x675.png" alt="Card image cap">
+                                              <img class=" mx-auto d-block" src="http://ioe.techclub.team/img/logo_transparent.png" alt="Card image cap">
                                               <h5 class="text-sm-center mt-2 mb-1">Buy From Government(Future Concept)</h5>
                                               <div class="location text-sm-center"><i class="fa fa-map-marker"></i> Dubai , UAE</div>
                                           </div>
@@ -193,6 +193,7 @@
 
                     </div>
                 </div>
+                
                 <!-- -->
                 <div class="row">
                     <div class="col-md-12 col-lg-4">
