--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -10,50 +10,8 @@
             <!-- Animated -->
             <div class="animated fadeIn">
                 <!-- Widgets  -->
-                <div class="row">
-                  <% for(var i=0; i < battery.length; i++){ %>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="stat-widget-five">
-                                    <!--<div class="stat-icon dib flat-color-1">
-                                        <i class="pe-7s-cash"></i>
-                                    </div>-->
-                                    <div class="">
-                                        <div class="text-left dib">
-                                          <%
-                                          var per = (battery[i].Current_power/battery[i].Storage) * 100;
-                                          %>
-                                            <div class="stat-text"> <span class="count"><%= per %></span>%</div>
-                                            <div class="stat-heading"><span class="box-title"><%= battery[i].model_no %></span></div>
-                                            <div class="stat-heading"><span class="box-title">Total Storage : </span> <%= battery[i].Storage %> KwH</div>
-                                            <!-- Current Power To be done in AJAX form in the future -->
-                                            <div class="stat-heading"><span class="box-title">Current Power : </span> <%= battery[i].Current_power %> KwH</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <% } %>
+                <div class="row" id="battery_info">
 
-                    <div class="col-lg-3 col-md-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="stat-widget-five">
-                                    <!--<div class="stat-icon dib flat-color-2">
-                                        <i class="pe-7s-cart"></i>
-                                    </div>-->
-                                    <div class="">
-                                        <div class="text-left dib">
-                                            <div class="stat-text"><span class="count"><%= sellers.length %></span></div>
-                                            <div class="stat-heading">No of power sellers in grid</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <!-- /Widgets -->
 
@@ -143,13 +101,13 @@
                                   <div class="card">
                                       <div class="card-body">
                                           <div class="mx-auto d-block">
-                                              <img class=" mx-auto d-block" src="http://ioe.techclub.team/img/logo_transparent.png" alt="Card image cap">
-                                              <h5 class="text-sm-center mt-2 mb-1">Buy From Government(Future Concept)</h5>
-                                              <div class="location text-sm-center"><i class="fa fa-map-marker"></i> Dubai , UAE</div>
+                                              <img class=" mx-auto d-block" src="http://www.networkrevolution.co.uk/wp-content/uploads/2014/04/img-smartgrid-problem.png" alt="Card image cap">
+                                              <h5 class="text-sm-center mt-2 mb-1"></h5>
+                                              <!--<div class="location text-sm-center"><i class="fa fa-map-marker"></i> </div>-->
                                           </div>
                                           <hr>
                                           <div class="card-text text-sm-center">
-                                              <h2>$1 per KwH</h2>
+                                              <h2>Future Feature</h2>
                                           </div>
                                       </div>
                                       <!--<button type="button" class="btn btn-success btn-lg active" data-toggle="modal" data-target="#largeModal">Buy</button>-->
@@ -193,7 +151,7 @@
 
                     </div>
                 </div>
-                
+
                 <!-- -->
                 <div class="row">
                     <div class="col-md-12 col-lg-4">
@@ -218,6 +176,57 @@
     <!-- /#right-panel -->
     <!-- Local Script-->
     <script>
+
+      /*--- This is to get the current battery information (This is updated every second )----*/
+
+      setInterval(function(){
+          $.ajax({ url: "/battery_information", success: function(data){
+
+            $("#battery_info").html("");
+
+           console.log(data.length);
+
+            if(data.length == 1 && data[0] == null || data.length == 0){
+            $("#battery_info").append("<h3>No Current Transactions left</h3>");
+            }
+
+           else{
+           for(var i = 0; i < data.length; i++){
+
+             var power_locked = data[1][i].Total_KwH;
+             var actual_power_left = data[0][i].Current_power - power_locked;
+             var per = (actual_power_left/data[0][i].Storage) * 100;
+
+             $("#battery_info").append(`<div class="col-lg-3 col-md-6">
+                 <div class="card">
+                     <div class="card-body">
+                         <div class="stat-widget-five">
+                             <!--<div class="stat-icon dib flat-color-1">
+                                 <i class="pe-7s-cash"></i>
+                             </div>-->
+                             <div class="">
+                               <div class="progress mb-2" style="height: 7px;">
+                                   <div class="progress-bar bg-flat-color-1" role="progressbar" style="width: `+per+`%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                               </div>
+                                 <div class="text-left dib">
+                                     <div class="stat-text"> <span class="count">`+per+`</span>%</div>
+                                     <div class="stat-heading"><span class="box-title">`+data[0][i].model_no+`%></span></div>
+                                     <br>
+                                     <div class="stat-heading"><span class="box-title" style="color:grey">Total Storage : </span> `+data[0][i].Storage+` KwH</div>
+                                     <!-- Current Power To be done in AJAX form in the future -->
+                                     <div class="stat-heading"><span class="box-title" style="color:grey">Current Power : </span> `+ data[0][i].Current_power+` KwH</div>
+                                     <div class="stat-heading"><span class="box-title" style="color:grey">Power Locked : </span> `+ power_locked +` KwH</div>
+
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+             </div>`);
+           }
+         }
+          }, dataType: "json"});
+       }, 1000);
 
     //Sellers POST JSON converted to client side JS
     var sellers =<%-JSON.stringify(sellers)%>
