--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -195,7 +195,7 @@
 
              var power_locked = data[1][i].Total_KwH;
              var actual_power_left = data[0][i].Current_power;
-             var per = (actual_power_left/data[0][i].Storage) * 100;
+             var per = Math.round((actual_power_left/data[0][i].Storage) * 100);
 
              $("#battery_info").append(`<div class="col-lg-3 col-md-6">
                  <div class="card">
