Username and papassword added

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -14,11 +14,11 @@
                     <form action="/login" method="POST">
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" name="Username" class="form-control" placeholder="Username">
+                            <input type="text" name="Username" class="form-control" placeholder="Username" value="root">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" name="Password" class="form-control" placeholder="Password">
+                            <input type="password" name="Password" class="form-control" placeholder="Password" value="toor">
                         </div>
                         <!--<div class="checkbox">
                             <label>
